Facebook auth färdig

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\Web-App-Mvc\\Infrastructure\\Data\\local_database.mdf;Integrated Security=True;Connect Timeout=30"
-  }
+  },
+  "ApiKey": "M2FiNzYzMzQtMWJkNi00ODRmLTg1NzQtNjlmOGFmNzE1Yzdh"
 }
