--- a/Web-App-Mvc-Presentation/appsettings.json
+++ b/Web-App-Mvc-Presentation/appsettings.json
@@ -8,6 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\Web-App-Mvc\\Infrastructure\\Data\\local_database.mdf;Integrated Security=True;Connect Timeout=30"
+  },
+  "ApiKey": {
+    "Secret": "M2FiNzYzMzQtMWJkNi00ODRmLTg1NzQtNjlmOGFmNzE1Yzdh"
   }
-
 }
